# pegasosSVM

./: CMakeLists.txt  README.md  pegasos.h  pegasos.hpp
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
src/: CMakeLists.txt
src/CPU/: cpu_svm.cpp  cpu_svm.h  cpu_svm.hpp
src/CUDA/: cuda_util.h  gpu_svm.cu  gpu_svm.cu~  gpu_svm.h  gpu_svm.hpp  gpu_svm.h~  gpu_svm_kernels.cu  gpu_svm_kernels.h  gpu_svm_kernels.hpp
src/shared/: general.h  general.hpp  general_impl.cu  shared.h  svm.h  svm.hpp  svm.h~  training.h  training.hpp  training.h~  training_impl.cu
